@@ -16,7 +16,7 @@
 <body>
 <h1>SNMP Trap Translator v0.9.3</h1>
 <b>(<a href="http://www.snmptt.org">SNMPTT</a>)</b><br />
-This file was last updated on:&nbsp; June 25th, 2004
+This file was last updated on:&nbsp; July 5th, 2004
 <p><a href="#License">License</a></p>
 <p><a href="#What-is-it">SNMPTT</a></p>
 <blockquote><a href="#What-is-it">What is it?</a><br />
@@ -78,10 +78,9 @@ file</a><br />
 <a href="#Feedback">Feedback &amp; Bugs</a><br />
 <a href="#Integration-with-other-software">Integration with other
 software</a><br />
-<b>&nbsp;&nbsp;</b> <a href="#Nagios-Netsaint">Nagios /
-Netsaint</a></blockquote>
-&nbsp;<br />
-&nbsp;
+<b>&nbsp;&nbsp;</b> <a href="#Nagios-Netsaint">Nagios / Netsaint</a></br>
+<b>&nbsp;&nbsp;</b> <a href="#SEC">Simple Event Correlator (SEC)</a></blockquote>
+<br />
 <h2><a id="License" name="License"></a>License</h2>
 <p>Copyright 2002, 2003 Alex Burger<br />
 alex_b@users.sourceforge.net<br />
@@ -2870,5 +2869,315 @@ after a minute or so, assuming of course the system responds OK to
 the <span style="font-weight: bold;">check-host-alive</span>
 check.<br />
 <br />
+<h3><a id="SEC" name="SEC"></a><b>SEC - Simple Event
+Correlator</b><b><br /></b></h3>
+<h4>Overview</h4>
+<p><a href="http://kodu.neti.ee/%7Eristo/sec/">Simple Event
+Correlator (SEC)</a> is a free and platform independent event
+correlation tool.<br /></p>
+<p style="font-weight: bold;">This section will outline the basic
+steps to integrate SNMPTT with SEC.&nbsp; It will not attempt to
+explain how SEC works.&nbsp; There is very good documentation
+available on the <a href="http://kodu.neti.ee/%7Eristo/sec/">SECs
+web page</a> and a good introduction to SEC can be found <a href=
+"http://sixshooter.v6.thrupoint.net/SEC-examples/article.html">here</a>.&nbsp;
+You should be able to install and configuration SEC before
+attempting to integrate it with SNMPTT.&nbsp; You should also have
+a functioning SNMPTT system that can at least log translated traps
+to a log file.</p>
+Here are a couple of examples of why you would want to integrate
+SNMPTT with SEC:&nbsp;<br />
+<ol>
+<li>You have a 'noisy' device that constantly sends the same trap
+over and over again.&nbsp; It would be possible to simply disable
+the trap in SNMPTT, but you want the trap to be logged, just not
+excessively.&nbsp; The SEC 'SingleWithSupress' could be used to
+reduce the number of traps logged.<br /></li>
+<li>&lt;&gt;Router interfaces often go up and down and you are
+receiving a trap for each event.&nbsp; You do not want to be
+alerted every time the interface 'bounces', but you do want to be
+alerted if it happens many times over a set period of time.&nbsp;
+You want to be alerted when the interface is down for more than 10
+seconds, and then when the interface comes back up.&nbsp;
+&lt;/&gt;<br /></li>
+</ol>
+</blockquote>
+<blockquote>
+<p>The following outlines how the flow of traps between SNMPTT and
+SEC could take place:<br /></p>
+<ol>
+<li>SNMPTT receives a trap.</li>
+<li>SNMPTT logs the trap to a separate log file such as
+/var/log/snmptt.sec.log using '/bin/echo ...' for the EXEC
+statement.&nbsp; No FORMAT line is defined so the trap is not
+logged to the regular snmptt.log log file (or SQL table if a SQL
+server is used).<br /></li>
+<li>SEC monitors the log file for new entries.</li>
+<li>SEC correlates the messages from the log file.</li>
+<li>When a new alert needs to be generated by SEC based on its
+rules, SEC will call an external script which will feed the
+information back into SNMPTT as a trap using a user defined unique
+trap OID.&nbsp; The unique trap OID is defined in a custom
+snmptt.conf file (such as /etc/snmp/snmptt.conf.sec).<br /></li>
+<li>SNMPTT will process the new trap as it would any other trap by
+logging to snmptt.log, a SQL table etc.<br /></li>
+</ol>
+<p><br /></p>
+<h4>Configuration Overview</h4>
+<p>The following outlines how example 2 from above could be handled
+using SEC.&nbsp; This is a slightly modified version of the example
+from the <a href=
+"http://kodu.neti.ee/%7Eristo/sec/examples.html">SEC Examples
+page</a>.<br /></p>
+<p>The example provides the following:<br /></p>
+<ul>
+<li>Prevents interface flapping from flooding the log files</li>
+<li>Provides an 'unstable' and 'stable' alert based on how often
+the interface bounces.<br /></li>
+</ul>
+<p>The following steps need to be completed:</p>
+<ol>
+<li>Modify the Cisco snmptt.conf file to output linkDown and linkUp
+messages to a separate log file.</li>
+<li>Create a new snmptt.conf file to handle incoming alerts from
+SEC</li>
+<li>Create a SEC configuration file to correlate the linkDown /
+linkUp messages and pass new alerts to a script</li>
+<li>Create a script that will feed the messages from SEC back in to
+SNMPTT</li>
+<li>Test<br /></li>
+</ol>
+<p><br /></p>
+<h4>1. Modify the Cisco SNMPTT.CONF file</h4>
+<p>The existing SNMPTT.CONF file needs to be modified to output the
+linkDown and linkUp messages to a separate log file for processing
+by SEC.<br /></p>
+<p>Following is an example snmptt.conf.cisco file modified to log a
+linkdown or linkup message to /var/log/snmptt/sec.log.&nbsp; As you
+can see there are no FORMAT lines so the trap will not be logged to
+the regular SNMPTT log system.<br /></p>
+<div style="margin-left: 40px;">EVENT Cisco_Link_Down
+.1.3.6.1.6.3.1.1.5.3.1.3.6.1.4.1.9 "Cisco Events" Minor<br />
+<span style="font-weight: bold;">EXEC /bin/echo "node=$A
+msg_text=cisco linkdown trap on interface $1" &gt;&gt;
+/var/log/snmptt/sec.log</span><br />
+SDESC<br />
+This event occurs when the Cisco agent<br />
+detects an interface has gone down.<br />
+<br />
+A linkDown trap signifies that the sending<br />
+protocol entity recognizes a failure in one of<br />
+the communication links represented in the<br />
+agent's configuration.<br />
+EDESC<br />
+#<br />
+#<br />
+#<br />
+EVENT Cisco_Link_Up .1.3.6.1.6.3.1.1.5.4.1.3.6.1.4.1.9 "Cisco
+Events" Normal<br />
+<span style="font-weight: bold;">EXEC /bin/echo "node=$A
+msg_text=cisco linkup trap on interface $1" &gt;&gt;</span>
+<span style=
+"font-weight: bold;">/var/log/snmptt/sec.log</span><br />
+SDESC<br />
+This event occurs when the Cisco agent<br />
+detects an interface has come back up.<br />
+<br />
+A linkUp trap signifies that the sending<br />
+protocol entity recognizes that one of the<br />
+communication links represented in the agent's<br />
+configuration has come up.<br />
+EDESC<br />
+#<br />
+#<br />
+#<br />
+<br /></div>
+<h4>2. Create a new SNMPTT.CONF file for incoming SEC
+alerts<br /></h4>
+A new SNMPTT.CONF file needs to be created which will handle the
+incoming traps from SEC.<br />
+<br />
+Following is an example snmptt.conf.sec file to accept incoming
+traps from SEC.&nbsp; Use an enterprise OID that will not
+interferre with any other OIDs already configured on your
+system.&nbsp; For example, 1.3.6.1.4.1.9999.<br />
+<br />
+<div style="margin-left: 40px;"><span style=
+"font-weight: bold;">EVENT Cisco_Link_DownUp 1.3.6.1.4.1.9999.1
+"Cisco Events" Normal</span><br />
+FORMAT $1<br />
+#<br />
+#<br />
+#<br />
+<span style="font-weight: bold;">EVENT Cisco_Link_DownUp
+1.3.6.1.4.1.9999.2 "Cisco Events" Major</span><br />
+FORMAT $1<br />
+#<br />
+#<br />
+#<br /></div>
+<br />
+<h4>3. Create a SEC configuration file</h4>
+Following is a SEC configuration file that handles the even
+correlation for the Cisco traps.&nbsp; This file is the same as the
+file available on the <a href=
+"http://kodu.neti.ee/%7Eristo/sec/examples.html">SEC Examples
+page</a> except comments and file paths have been modified.<br />
+<br />
+<div style="margin-left: 40px;">
+################################################################<br />
+
+#&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sample SEC
+ruleset for SNMPTT<br />
+################################################################<br />
+
+<br />
+# process Cisco linkDown/linkUp trap events received from<br />
+# SNMPTT via log file<br />
+<br />
+type=PairWithWindow<br />
+ptype=RegExp<br />
+pattern=node=(\S+).*msg_text=cisco linkdown trap on interface
+(\S+)<br />
+desc=CISCO $1 INTERFACE $2 DOWN<br />
+action=event %s;<br />
+continue2=TakeNext<br />
+ptype2=RegExp<br />
+pattern2=node=$1.*msg_text=cisco linkup trap on interface $2<br />
+desc2=CISCO %1 INTERFACE %2 BOUNCE<br />
+action2=event %s;<br />
+window=20<br />
+<br />
+type=SingleWithSuppress<br />
+continue=TakeNext<br />
+ptype=RegExp<br />
+pattern=CISCO (\S+) INTERFACE (\S+) DOWN<br />
+desc=cisco $1 interface $2 down<br />
+action=reset +1 %s<br />
+window=60<br />
+<br />
+type=Pair<br />
+ptype=RegExp<br />
+pattern=CISCO (\S+) INTERFACE (\S+) DOWN<br />
+desc=cisco $1 interface $2 down<br />
+action=shellcmd /home/snmptt/cisco_msg $1 $2 major down<br />
+ptype2=RegExp<br />
+pattern2=node=$1.*msg_text=cisco linkup trap on interface $2<br />
+desc2=cisco %1 interface %2 up<br />
+action2=shellcmd /home/snmptt/cisco_msg %1 %2 normal up<br />
+window=86400<br />
+<br />
+type=SingleWith2Thresholds<br />
+ptype=RegExp<br />
+pattern=CISCO (\S+) INTERFACE (\S+) BOUNCE<br />
+desc=cisco $1 interface $2 is unstable<br />
+action=shellcmd /home/snmptt/cisco_msg $1 $2 major unstable<br />
+window=3600<br />
+thresh=10<br />
+desc2=cisco $1 interface $2 is stable again<br />
+action2=shellcmd /home/snmptt/cisco_msg $1 $2 normal stable<br />
+window2=10800<br />
+thresh2=0<br /></div>
+<br />
+Here is a quick breakdown of what each rule does:<br />
+<br />
+<span style="font-weight: bold;">First rule:</span><br />
+<ul>
+<li>If a linkDown is received (node=x msg_text=cisco linkdowni trap
+on interface x from SNMPTT), and then a linkUp is received within
+20 seconds, it is considered a BOUNCE.&nbsp; A new 'event' is
+created with the internal SEC event 'CISCO %1 INTERFACE %2 BOUNCE'
+is created which is passed to the other rules.&nbsp;<br /></li>
+<li>If a linkDown is received and a linkUp is <span style=
+"font-weight: bold;">not</span> received within 20 seconds, a new
+'down' internal SEC event is created (CISCO $1 INTERFACE $2 DOWN)
+which is passed to the other rules.</li>
+</ul>
+<span style="font-weight: bold;">Second rule:</span><br />
+<ul>
+<li>Allows only one 'CISCO x INTERFACE x DOWN' message to be
+processed over 60 seconds.</li>
+</ul>
+<span style="font-weight: bold;">Third rule:</span><br />
+<ul>
+<li>When a SEC internally generated 'CISCO $1 INTERFACE $2 DOWN'
+message is found, it passes the host name, interface number and
+'major <span style="font-weight: bold;">down</span>' to the
+cisco_msg script.</li>
+<li>When a SEC internally generated 'CISCO $1 INTERFACE $2 UP'
+message is found, it passes the host name, interface number and
+'normal <span style="font-weight: bold;">up</span>' to the
+cisco_msg script.</li>
+</ul>
+<span style="font-weight: bold;">Fourth rule:</span><br />
+<ul>
+<li>If ten 'CISCO %1 INTERFACE %2 BOUNCE' messages are detected
+over the span of 1 hour, it passes the host name, interface number
+and 'major <span style="font-weight: bold;">unstable</span>' to the
+cisco_msg script.</li>
+<li>&lt;&gt;If after the last unstable alert there are no 'CISCO %1
+INTERFACE %2 BOUNCE' messages for 3 hours, it passes the host name,
+interface number and 'normal <span style=
+"font-weight: bold;">stable</span>' to the cisco_msg
+script.<br /></li>
+</ul>
+<br />
+<h4>4. Create a script to pass a trap back to SNMPTT</h4>
+Following is a Perl script that passes the information passed from
+SEC back to SNMPTT by calling SNMPTTHANDLER directly.&nbsp; This
+file is basically a modified Perl version of the shell script
+available on the <a href=
+"http://kodu.neti.ee/%7Eristo/sec/examples.html">SEC Examples
+page</a>.<br />
+<br />
+<div style="margin-left: 40px;">#!/usr/bin/perl<br />
+#<br />
+# the cisco_msg script:<br />
+#<br />
+use Socket;<br />
+<br />
+$node = shift(@ARGV);<br />
+$interface = shift(@ARGV);<br />
+$severity = shift(@ARGV);<br />
+$text&nbsp; = shift(@ARGV);<br />
+<br />
+$temp_ipaddr = gethostbyname($node);<br />
+if (defined($temp_ipaddr)) {<br />
+&nbsp; $ipaddr = Socket::inet_ntoa(scalar($temp_ipaddr));<br />
+}<br />
+else {<br />
+&nbsp; $ipaddr = "0.0.0.0";<br />
+}<br />
+<br />
+# use snmpget utility from Net-SNMP package<br />
+$ifname=`/usr/bin/snmpget -c public -OQv $NODE
+.1.3.6.1.2.1.2.2.1.2.$IF`<br />
+$description=`/usr/bin/snmpget -c public -OQv $NODE
+.1.3.6.1.4.1.9.2.2.1.1.28.$IF`<br />
+<br />
+$message="Interface $ifname ($description) $text";<br />
+$message=~s/\"/\'/g;<br />
+<br />
+open (TRAP, "|/usr/sbin/snmptthandler");<br />
+<br />
+select TRAP;<br />
+<br />
+print "$node\n";<br />
+print "$ipaddr\n";<br />
+print ".1.3.6.1.2.1.1.3.0 00:00:00:00.00\n";<br />
+if ($severity=~/normal/i) {<br />
+&nbsp; print ".1.3.6.1.6.3.1.1.4.1.0 1.3.6.1.4.1.9999.1\n";<br />
+}<br />
+else {<br />
+&nbsp; print ".1.3.6.1.6.3.1.1.4.1.0 1.3.6.1.4.1.9999.2\n";<br />
+}<br />
+print "1.3.6.1.4.1.9999.1.1 $message\n";<br />
+print ".1.3.6.1.6.3.18.1.3.0 $ipaddr\n";<br />
+print ".1.3.6.1.6.3.18.1.4.0 public\n";<br />
+print ".1.3.6.1.6.3.1.1.4.3.0 1.3.6.1.4.1.9999\n";<br />
+<br />
+close TRAP;<br /></div>
+<br />
+<h4>5. Test</h4>
+<br /></blockquote>
 </body>
 </html>
